--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
                 </tr>
                 <tr>
                     <td>html</td>
-                    <td><a href="https://www.linkedin.com/in/felippebueno/">Prof. Felippe</a></td>
+                    <td><a href="https://www.linkedin.com/in/filipemscampos/">Prof. Filipe Morgado</a></td>
+                    
                 </tr>
                 <tr>
                     <td>JavaScript</td>
-                    <td>Felipe Morgado</td>
+                    <td><a href="https://www.linkedin.com/in/felippebueno/">Prof. Felippe</a></td>
                 </tr>
                 <tr>
                     <td>SoftSkills</td>
