--- a/index.html
+++ b/index.html
@@ -55,20 +55,20 @@
                 </tr>
                 <tr>
                     <td>html</td>
-                    <td><a href="https://www.linkedin.com/in/filipemscampos/">Prof. Filipe Morgado</a></td>
+                    <td><a href="https://www.linkedin.com/in/filipemscampos/" target="_blank">Prof. Filipe Morgado</a></td>
                     
                 </tr>
                 <tr>
                     <td>JavaScript</td>
-                    <td><a href="https://www.linkedin.com/in/felippebueno/">Prof. Felippe</a></td>
+                    <td><a href="https://www.linkedin.com/in/felippebueno/" target="_blank">Prof. Felippe</a></td>
                 </tr>
                 <tr>
                     <td>SoftSkills</td>
-                    <td><a href="https://www.linkedin.com/in/paulo-rogerio-lazari/">Prof. Paulo Lázari</a></td>
+                    <td><a href="https://www.linkedin.com/in/paulo-rogerio-lazari/" target="_blank">Prof. Paulo Lázari</a></td>
                 </tr>
                 <tr>
                     <td>Geral</td>
-                    <td><a href="https://www.linkedin.com/in/kenjitaniguchi/?originalSubdomain=br">Kenji Taniguchi</a>
+                    <td><a href="https://www.linkedin.com/in/kenjitaniguchi/?originalSubdomain=br" target="_blank">Kenji Taniguchi</a>
                     </td>
                 </tr>
             </tbody>
