--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <p>Acesse a página da <strong><a href="https://alphalumen.org.br/edtech-2020/">Alpha Ed/Tech</a></strong>
             </p>
         </article>
+        <main>
     </div>
     <div>
         <h2>Lista Ordenada</h2>
@@ -55,8 +56,9 @@
                 </tr>
                 <tr>
                     <td>html</td>
-                    <td><a href="https://www.linkedin.com/in/filipemscampos/" target="_blank">Prof. Filipe Morgado</a></td>
-                    
+                    <td><a href="https://www.linkedin.com/in/filipemscampos/" target="_blank">Prof. Filipe Morgado</a>
+                    </td>
+
                 </tr>
                 <tr>
                     <td>JavaScript</td>
@@ -64,11 +66,13 @@
                 </tr>
                 <tr>
                     <td>SoftSkills</td>
-                    <td><a href="https://www.linkedin.com/in/paulo-rogerio-lazari/" target="_blank">Prof. Paulo Lázari</a></td>
+                    <td><a href="https://www.linkedin.com/in/paulo-rogerio-lazari/" target="_blank">Prof. Paulo
+                            Lázari</a></td>
                 </tr>
                 <tr>
                     <td>Geral</td>
-                    <td><a href="https://www.linkedin.com/in/kenjitaniguchi/?originalSubdomain=br" target="_blank">Kenji Taniguchi</a>
+                    <td><a href="https://www.linkedin.com/in/kenjitaniguchi/?originalSubdomain=br" target="_blank">Kenji
+                            Taniguchi</a>
                     </td>
                 </tr>
             </tbody>
@@ -86,32 +90,22 @@
     <div>
         <h4>Código-Fonte</h4>
         <pre>
-            <code>
-                function precoItens(){
-                    //Walmart
-                    let precoMisto = 5;
-                    let numColherSopa = 5;
-                    let precoBombom = 1.5;
-                    let nomeBombom = "Sonho de Valsa";
-                }
-            </code>
-        </pre>
-        <div>
-            <h5>Abreviações</h5>
-            <p>Estudando <abbr title="HyperText Markup Language">HTML</abbr></p>
-        </div>
-
-
+                <code>
+                    function precoItens(){
+                        //Walmart
+                        let precoMisto = 5;
+                        let numColherSopa = 5;
+                        let precoBombom = 1.5;
+                        let nomeBombom = "Sonho de Valsa";
+                    }
+                </code>
+            </pre>
     </div>
-
-
-
-
-
-
-
-
-
+    <div>
+        <h5>Abreviações</h5>
+        <p>Estudando <abbr title="HyperText Markup Language">HTML</abbr></p>
+    </div>
+    </main>
 </body>
 
 </html>
