--- a/index.html
+++ b/index.html
@@ -22,30 +22,27 @@
                     href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" target="_blank">Aqui</a></strong>, que será
             direcionado</P>
     </header>
-    <div>
-        <article>
-            <a href="https://alphalumen.org.br/edtech-2020/"><img src="image/logo alphaedtech.png"
-                    alt="logo alpha edtech"></a>
-            <p>Acesse a página da <strong><a href="https://alphalumen.org.br/edtech-2020/">Alpha Ed/Tech</a></strong>
-            </p>
-        </article>
-        <main>
-    </div>
-    <div>
-        <h2>Lista Ordenada</h2>
-        <ol>
-            <li>Empatia</li>
-            <li>Comunicação</li>
-        </ol>
-    </div>
-    <div>
-        <h2>Lista não Ordenada</h2>
-        <ul>
-            <li>Espirito de Equipe</li>
-            <li>Perseverança</li>
-        </ul>
-    </div>
-    <div>
+    <article>
+        <a href="https://alphalumen.org.br/edtech-2020/"><img src="image/logo alphaedtech.png"
+                alt="logo alpha edtech"></a>
+        <p>Acesse a página da <strong><a href="https://alphalumen.org.br/edtech-2020/">Alpha Ed/Tech</a></strong>
+        </p>
+    </article>
+    <main>
+        <div>
+            <h2>Lista Ordenada</h2>
+            <ol>
+                <li>Empatia</li>
+                <li>Comunicação</li>
+            </ol>
+        </div>
+        <div>
+            <h2>Lista não Ordenada</h2>
+            <ul>
+                <li>Espirito de Equipe</li>
+                <li>Perseverança</li>
+            </ul>
+        </div>
         <table border="1">
             <tbody>
                 <th>Cursos</th>
@@ -56,7 +53,8 @@
                 </tr>
                 <tr>
                     <td>html</td>
-                    <td><a href="https://www.linkedin.com/in/filipemscampos/" target="_blank">Prof. Filipe Morgado</a>
+                    <td><a href="https://www.linkedin.com/in/filipemscampos/" target="_blank">Prof. Filipe
+                            Morgado</a>
                     </td>
 
                 </tr>
@@ -77,19 +75,18 @@
                 </tr>
             </tbody>
         </table>
-    </div>
-    <div>
-        <h3>Visão</h3>
-        <p><strong>Superar</strong> desafios e pensar fora da caixa</p>
-        <p><em>Fazer a diferença</em> no mundo</p>
-        <p>Ser <u>relevante</u> na transformação da <u>educação</u></p>
-    </div>
-    <div>
-        <p>&#x1f911 &#x1f911 &#x1f911</p>
-    </div>
-    <div>
-        <h4>Código-Fonte</h4>
-        <pre>
+        <div>
+            <h3>Visão</h3>
+            <p><strong>Superar</strong> desafios e pensar fora da caixa</p>
+            <p><em>Fazer a diferença</em> no mundo</p>
+            <p>Ser <u>relevante</u> na transformação da <u>educação</u></p>
+        </div>
+        <div>
+            <p>&#x1f911 &#x1f911 &#x1f911</p>
+        </div>
+        <div>
+            <h4>Código-Fonte</h4>
+            <pre>
                 <code>
                     function precoItens(){
                         //Walmart
@@ -100,11 +97,11 @@
                     }
                 </code>
             </pre>
-    </div>
-    <div>
-        <h5>Abreviações</h5>
-        <p>Estudando <abbr title="HyperText Markup Language">HTML</abbr></p>
-    </div>
+        </div>
+        <div>
+            <h5>Abreviações</h5>
+            <p>Estudando <abbr title="HyperText Markup Language">HTML</abbr></p>
+        </div>
     </main>
 </body>
 
