--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             direcionado</P>
     </header>
     <article>
-        <a href="https://alphalumen.org.br/edtech-2020/"><img src="image/logo alphaedtech.png"
+        <a href="https://alphalumen.org.br/edtech-2020/" target="_blank"><img src="image/logo alphaedtech.png"
                 alt="logo alpha edtech"></a>
-        <p>Acesse a página da <strong><a href="https://alphalumen.org.br/edtech-2020/">Alpha Ed/Tech</a></strong>
+        <p>Acesse a página da <strong><a href="https://alphalumen.org.br/edtech-2020/" target="_blank">Alpha Ed/Tech</a></strong>
         </p>
     </article>
     <main>
